syntax = "proto3";

option java_outer_classname = "SecurityProto";

import "pandora_experimental/host.proto";
import "google/protobuf/empty.proto";

package pandora;

service Security {
  // Begin pairing asynchronously with a device. Responses will be streamed
  // using the OnPairing rpc.
  rpc Pair(PairRequest) returns (google.protobuf.Empty);
  // Listen to pairing events.
  // This is handled independently from connections for several reasons:
  // - Pairing can be triggered at any time and multiple times during the
  //   lifetime of a connection (this also explains why this is a stream).
  // - In BR/EDR, the specification allows for a device to authenticate before
  //   connecting when in security mode 3 (link level enforced security).
  rpc OnPairing(stream PairingEventAnswer) returns (stream PairingEvent);
  // Remove pairing.
  rpc DeletePairing(DeletePairingRequest) returns (DeletePairingResponse);
}

message PairRequest {
    Connection connection = 1;
}

message PairingEvent {
    // Peer Bluetooth Device Address as array of 6 bytes.
    bytes address = 1;
    // Authentication method used for this pairing event
    oneof method {
      // "Just Works" SSP / LE pairing association
      // model. Confirmation is automatic.
      google.protobuf.Empty just_works = 2;
      // Numeric Comparison SSP / LE pairing association
      // model. Confirmation is required.
      uint32 numeric_comparison = 3;
      // Passkey Entry SSP / LE pairing association model.
      // Passkey is typed by the user.
      // Only for LE legacy pairing or on devices without a display
      google.protobuf.Empty passkey_entry_request = 4;
      // Passkey Entry SSP / LE pairing association model.
      // Passkey is shown to the user.
      // The peer device receives a Passkey Entry request.
      uint32 passkey_entry_notification = 5;
      // Legacy PIN Pairing.
      // A PIN Code is typed by the user on IUT.
      google.protobuf.Empty pin_code_request = 6;
      // Legacy PIN Pairing.
      // We generate a PIN code, and the user enters it in the peer
      // device. While this is not part of the specification, some display
      // devices automatically generate their PIN Code, instead of asking the
      // user to type it
      bytes pin_code_notification = 7;
    }
}

message PairingEventAnswer {
    // Received pairing event.
    PairingEvent event = 1;
    // Answer when needed to the pairing event method.
    oneof answer {
      // Numeric Comparison confirmation.
      // Used when pairing event method is `numeric_comparison` or `just_works`
      bool confirm = 2;
      // Passkey typed by the user.
      // Used when pairing event method is `passkey_entry_request`.
      uint32 passkey = 3;
      // Pin typed by the user.
      // Used when pairing event method is `pin_code_request`.
      bytes pin = 4;
    };
}

// Request of the `DeletePairing` method.
message DeletePairingRequest {
    // Local Bluetooth Device Address as array of 6 bytes.
    bytes address = 1;
}

// Response of the `DeletePairing` method.
message DeletePairingResponse {}
